@@ -1,5 +1,9 @@
 2019-05-02  Jonathan Wakely  <jwakely@redhat.com>
 
+	* include/bits/unique_lock.h: Fix/improve doxygen markup.
+	* include/std/mutex: Likewise.
+	* include/std/shared_mutex: Likewise.
+
 	* include/bits/fs_dir.h: Fix/improve doxygen markup.
 	* include/bits/fs_fwd.h: Likewise.
 	* include/bits/fs_ops.h: Likewise.
